--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "php": ">=5.5.0",
     "ext-curl": "*",
     "ext-json": "*",
+    "ext-fileinfo": "*",
     "anlutro/curl": "^1.4"
   },
   "autoload": {
