--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,30 @@
 {
-  "name": "lptracker/php-sdk",
-  "description": "LPTracker PHP SDK",
-  "keywords": ["lptracker", "sdk", "php-sdk"],
-  "type": "library",
-  "homepage": "https://github.com/lptracker/php-sdk",
-  "license": "Apache-2.0",
-  "authors": [
-    {
-      "name": "Andrey Voropaev",
-      "email": "avoropaev@lptracker.ru"
+    "name": "lptracker/php-sdk",
+    "description": "LPTracker PHP SDK",
+    "keywords": [
+        "lptracker",
+        "sdk",
+        "php-sdk"
+    ],
+    "type": "library",
+    "homepage": "https://github.com/lptracker/php-sdk",
+    "license": "Apache-2.0",
+    "authors": [
+        {
+            "name": "Andrey Voropaev",
+            "email": "avoropaev@lptracker.ru"
+        }
+    ],
+    "require": {
+        "php": ">=5.5.0",
+        "ext-curl": "*",
+        "ext-json": "*",
+        "ext-fileinfo": "*",
+        "anlutro/curl": "^1.4"
+    },
+    "autoload": {
+        "classmap": [
+            "src"
+        ]
     }
-  ],
-  "require": {
-    "php": ">=5.5.0",
-    "ext-curl": "*",
-    "ext-json": "*",
-    "ext-fileinfo": "*",
-    "anlutro/curl": "^1.4"
-  },
-  "autoload": {
-    "classmap": ["src"]
-  }
 }
